plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.xtopdf'

// Dynamic versioning based on git tags
version = providers.exec {
	commandLine('git', 'describe', '--tags', '--always', '--dirty')
}.standardOutput.asText.getOrElse('0.0.1-SNAPSHOT').trim().replace('v', '')

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

// Enable preview features for Java 25
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
	jvmArgs += ['--enable-preview']
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

configurations.configureEach {
	resolutionStrategy {
		force 'org.apache.commons:commons-compress:1.28.0'
		force 'org.apache.commons:commons-lang3:3.20.0'
		force 'commons-beanutils:commons-beanutils:1.11.0'
		force 'org.apache.jena:jena-core:6.1.0'
		force 'org.apache.jena:jena-base:6.1.0'
		force 'org.apache.jena:jena-iri3986:6.1.0'
		force 'org.apache.jena:jena-langtag:6.1.0'
		force 'org.bouncycastle:bcprov-jdk18on:1.84' // Fix CVE-2026-0636, CVE-2025-14813, CVE-2025-8885
		force 'org.bouncycastle:bcpkix-jdk18on:1.84'
		force 'org.bouncycastle:bcutil-jdk18on:1.84'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.apache.poi:poi:5.5.1'
  implementation 'org.apache.poi:poi-ooxml:5.5.1'
  implementation 'org.apache.poi:poi-scratchpad:5.5.1'
	implementation 'org.apache.pdfbox:pdfbox:3.0.7'
	implementation 'org.jsoup:jsoup:1.22.2'
  implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
  implementation 'org.commonmark:commonmark:0.28.0'
  implementation('org.odftoolkit:odfdom-java:0.13.0') {
    exclude group: 'org.slf4j', module: 'slf4j-simple'
  }
  
  // Security vulnerability fixes
  implementation 'org.apache.commons:commons-lang3:3.20.0'
  implementation 'commons-beanutils:commons-beanutils:1.11.0'
  implementation 'org.apache.jena:jena-core:6.1.0'
  
  // Docker Java client for container orchestration
  implementation 'com.github.docker-java:docker-java-core:3.7.1'
  implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.7.1'
  
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
	testImplementation 'net.jqwik:jqwik:1.10.1'
	testImplementation 'org.assertj:assertj-core:3.27.7' // Fix CVE-2026-24400 XXE vulnerability
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport

	// Parallel test execution with multiple JVM forks
	maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
	forkEvery = 100

	// JVM settings for test forks
	jvmArgs += [
		'-Xmx512m',
		'-XX:+UseG1GC'
	]
}

jacocoTestReport {
	dependsOn test
}

jacocoTestCoverageVerification {
	dependsOn jacocoTestReport
	violationRules {
		rule {
			limit {
				minimum = 0.80
			}
		}
	}
}
